history_ui/css/index.css
#main>#items {
  flex: 1;
}

#items {
  margin-top: 31.4px;
  padding-top: 0;
  padding-left: 1em;
  padding-right: 1em;
  padding-bottom: 1em;
}

#items {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

div.page {
  overflow: hidden;
  background-color: #eeeeee;
  margin: 9px;
  border: 1px solid #ccc;
  width: 292px;
  min-width: 292px;
  height: 211.5;
  min-height: 211.5;
  border-radius: 10px;
  margin-bottom: 22px;
  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.05);
}

div.page:hover {
  box-shadow: 0px 0px 1px 1px rgb(2, 117, 216);
  background-color: #5c5c5c;
  border: 1px solid rgb(2, 117, 216);
}

div.page:hover .desc {
  color: white;
}

div.page img {
  object-position: 0 0;
  z-index: -1000;
  object-fit: cover;
  width: 290px;
  min-width: 290px;
  max-width: 290px;
  height: 180px;
  min-height: 180px;
  max-height: 180px;
  border-radius: 10px 10px 0px 0px;
}

div.desc {
  height: 25px;
  min-height: 25px;
  max-height: 25px;
  width: 290px;
  min-width: 290px;
  max-width: 290px;
  text-align: center;
  padding-left: 5px;
  padding-right: 5px;
}

.overlay {
  position: absolute;
  display: block;
  z-index: 2;
  cursor: default;
  height: 90%;
  width: 80vw;
  background-color: #f9f9f9;
}

#loader {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -114.9px;
  margin-left: -83.5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  pointer-events: none;
}

#loader {
  -webkit-animation: spin 1.2s linear infinite;
  -moz-animation: spin 1.2s linear infinite;
  animation: spin 1.2s linear infinite;
}

@-moz-keyframes spin {
  100% {
    -moz-transform: rotate(360deg);
  }
}

@-webkit-keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

#alert {
  font-size: 150px;
  color: rgba(200, 200, 200, 0.3);
  margin-top: -120px;
  margin-left: -75px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  pointer-events: none;
}

#alert-text {
  font-size: 20px;
  color: rgba(200, 200, 200, 0.3);
  margin-top: 50px;
  margin-left: -122px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  pointer-events: none;
}

@media (max-width: 392px) {
  div.page {
    width: 200px;
    min-width: 200px;
    height: 211.5;
    min-height: 211.5;
  }
  div.desc {
    width: 200px;
    min-width: 200px;
    max-width: 200px;
  }
  #alert-text {
    display: none;
  }
  nav {
    z-index: 99999;
  }
}

@media (max-width: 283px) {
  div.page {
    width: 160px;
    min-width: 160px;
    height: 211.5;
    min-height: 211.5;
  }
  div.desc {
    width: 160px;
    min-width: 160px;
    max-width: 160px;
  }
}

@media (max-width: 242px) {
  div.page {
    width: 130px;
    min-width: 130px;
    height: 211.5;
    min-height: 211.5;
  }
  div.desc {
    width: 130px;
    min-width: 130px;
    max-width: 130px;
  }
}

